<resources>
    <string name="app_name">CostcoProject</string>
    <string name="city_search">City</string>
    <string name="name_search">Name</string>
    <string name="address_search">Address</string>
    <string name="state_search">State</string>
    <string name="zip_search">Zip</string>
    <string name="country_search">Country</string>
    <string name="home_description">Clicking the button on the top left will change the search parameters for the restaurant.\n</string>
    <string name="name_example">Name - Name of the restaurant</string>
    <string name="address_example"> Address - Address line. Should not contain state or city or zip.</string>
    <string name="state_example">State - State code (ex.: IL)</string>
    <string name="city_example"> City - (ex.: Chicago)</string>
    <string name="zip_example">Zip - (ex: 60601)</string>
    <string name="country_example">Country - Country Code (ex: US)</string>
    <string name="phone_concat">%1$s%2$s</string>
    <string name="no_results_found">No results were found for the given input.\n\nEither there are no entries for this search or the input was entered incorrectly.</string>
    <string name="address_concat">%1$s, %2$s, %3$s, %4$s</string>
    <string name="error_occurred">An error has occurred %1$s</string>
</resources>
