<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/home_description"
    />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/name_example"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/state_example"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/city_example"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/zip_example"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/country_example"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:text="@string/address_example"
        />

</LinearLayout>